Demo at https://codepen.io/amit_sheen/pen/KKLKyyQ doesnt render anything on the screen
Categories
(Core :: Web Painting, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr128 | --- | unaffected |
| firefox132 | --- | unaffected |
| firefox133 | --- | unaffected |
| firefox134 | --- | verified |
| firefox135 | --- | verified |
People
(Reporter: mayankleoboy1, Assigned: tnikkel)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(2 files)
Go to https://codepen.io/amit_sheen/pen/KKLKyyQ
ER: Nothing draws on the screen. Though if you do a "ctrl + A" on the demo, the text is displayed.
AR: It should
Bisection:
Bug 1927315. Do not try to prerender during hit test display list building. r=layout-reviewers,emilio
Differential Revision: https://phabricator.services.mozilla.com/D226981
| Reporter | ||
Comment 1•11 months ago
|
||
Comment 2•11 months ago
|
||
Set release status flags based on info from the regressing bug 1927315
| Assignee | ||
Comment 3•11 months ago
|
||
Thanks for filing.
It seems that this was already pretty buggy, bug 1927315 just made it worse. Does that match what you see as well?
| Reporter | ||
Comment 4•11 months ago
|
||
yes, it matches with what i see too.
| Assignee | ||
Comment 5•11 months ago
|
||
Thanks.
Okay, so there is an underlying pre-existing background-clip: text bug here (there are many existing background-clip: text bugs), and I just happened to disturb it a little worse. I'll restore us to the old less-buggy behaviour but still preserve the perf win of the original patch.
| Assignee | ||
Comment 6•11 months ago
|
||
GenerateGlyphMask is used for background-clip: text, of which our implementation is pretty buggy. In fact, the testcase of this bug we ar buggy on even before the regressing bug, the regressing bug just made it worse. So we already didn't handle this situation properly and we happened to disturb it and make it worse. Let's just restore the old behaviour for the unusual background-clip: text case, but we still keep the win in display list building for all other (much more common) cases.
Updated•11 months ago
|
| Reporter | ||
Comment 7•11 months ago
|
||
(In reply to Timothy Nikkel (:tnikkel) from comment #5)
Thanks.
Okay, so there is an underlying pre-existing background-clip: text bug here (there are many existing background-clip: text bugs), and I just happened to disturb it a little worse. I'll restore us to the old less-buggy behaviour but still preserve the perf win of the original patch.
I have filed bug 1929473 to track the pre-existing bug with background-clip: text .
Updated•11 months ago
|
Comment 10•11 months ago
|
||
Reproducible on a 2024-11-04 Nightly build on Windows 10.
Verified as fixed on Firefox Nightly 135.0a1 and Firefox 134.0b2 on Windows 10, macOS 14, Ubuntu 22.
Description
•